Some Modal Fixes :smirk_cat:
Projects with length descriptions caused content to spill outside the modal. Fixed this issue by:
* Setting the width and height of the modal's p-tag to 100%.
* Adjusting the font-size and line-height.
* Adding overflow: auto for those extra long descriptions that need scroll bars :monkey:

Also added the code/github urls for t=each project by dynamically setting them with JS using the data-code attribute.

--- a/style.css
+++ b/style.css
@@ -345,8 +345,8 @@ section {
     position: fixed;
     left: 50%;
     top: 50%;
-    width: 90vw;
-    height: 90vh;
+    width: 92vw;
+    height: 92vh;
     visibility: hidden;
     transform: translate(-50%, -50%);
     transition: .3s ease;
@@ -379,8 +379,11 @@ section {
 #modal h3 { font-size: 1.2em; }
 
 #modal-desc {
-    font-size: 18px;
-    line-height: 1.3;
+    font-size: .85em;
+    height: 100%;
+    width: 100%;
+    line-height: 1.2;
+    overflow: auto;
     text-align: left;
 }
 
@@ -549,6 +552,8 @@ footer a:hover,
     .project:hover { transform: translateY(-10px); }
     
     .project:hover::after { display: none; }
+
+    #modal-desc { font-size: 1em; }
 
     #form-submit,
     #after-submit .btn { max-width: 190px; }
